Clean up JDK-17 related resources